# Inpainting

./: .gitignore  PROJET.odt  README.md  testMex.txt
Project/: CMakeLists.txt
Project/src/: image.cpp  image.hpp  main.cpp  patch.cpp  patch.hpp  regionfill.cpp  regionfill.hpp
Zotero/Ma bibliothèque/: Ma bibliothèque.rdf
Zotero/Ma bibliothèque/files/12/: .zotero-ft-cache  1211538.html
Zotero/Ma bibliothèque/files/15/: .zotero-ft-cache
Zotero/Ma bibliothèque/files/18/: 1217265.html  dpt3product.js  swfobject.js
Zotero/Ma bibliothèque/files/20/: bertalmio_2000
Zotero/Ma bibliothèque/files/21/: richard_chang_2001
Zotero/Ma bibliothèque/files/22/: CVADE2QJ.js  a  citation.html  gtm.js  jsapi  monetization.js
Zotero/Ma bibliothèque/files/24/: Criminisi_2003  Criminisi_2004
Zotero/Ma bibliothèque/files/25/: bertalmio_2003
Zotero/Ma bibliothèque/files/26/: .zotero-ft-cache
Zotero/Ma bibliothèque/files/3/: .zotero-ft-cache  10867651.2004.html  element.js  ireader.js  main_fr.js
Zotero/Ma bibliothèque/files/30/: .zotero-ft-cache  1323101.html
Zotero/Ma bibliothèque/files/34/: .zotero-ft-cache  10867651.2004.html  element.js  (+1 more)
doc/: PROJET.odt
images/standard_test_images/: d_lena_color_256.tif  mask_lena_color_256.tif
matlab_isophote/: isophote.m  main.m
matlab_normale/: correct_d.m  create_patch.m  invers_patch.m  test_normal.m
opencv_project/: inpaint_opencv.py
poster/: beamerthemeI6pd2.sty  poster_inpaint.aux  poster_inpaint.snm  poster_inpaint.tex  tangocolors.sty
ppt/: Inpainting.pptx
resume/: Criminisi_2004  bertalmio_2000  telea_2004
(+6 files in other folders)
